--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,14 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^25.0.7",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "typescript": "^5.7.2"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
